--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,11 @@
                           "input": "src/assets",
                           "output": "/assets"
                         },
+                                                {
+                          "glob": "**/*",
+                          "input": "src/app/data",
+                          "output": "/data"
+                        },
                         {
                           "glob": "**/*",
                           "input": "public",
